--- a/mysql.org
+++ b/mysql.org
@@ -68,4 +68,28 @@
 ****** 每s会进行刷新到日志文件
 ***** 额外的内存池
 *** checkpoint
-
+* mysql 加锁处理
+** 聚族索引
+** 2段锁
+*** 锁操作分为加锁和解锁2个阶段
+*** 2个阶段不相交，加锁阶段，只加锁，不解锁，反之亦然
+** 加锁的几种情形
+    此处提到的表里面有id和name2个字段
+    1. id是主键，rc级别
+       行锁
+    2. id二级唯一索引，rc级别
+       会加2个X锁，一个对应id unique索引的记录，另一个对应聚族索引上的数据
+    3. id非唯一索引，rc级别
+       所有满足条件的记录都会加锁，同时这些记录在主键索引上的记录，也会加锁
+    4. id无索引，rc级别
+       聚族索引上所有的记录都被加锁，既不是加表锁，也不是行锁，在实际情况中mysql做了优化，会先加锁，然后将不满足的记录解锁
+    5. id主键，rr级别
+       同1
+    6. id二级唯一索引，rr级别
+       同2
+    7. id非唯一索引，rr级别
+       为了解决幻读问题，不仅会在满足条件的记录加锁，加GAP锁，然后加主键聚族索引X锁（不需要加GAP锁)
+    8. id无索引，rr级别
+       聚族索引所有记录都加X锁和GAP锁
+** 参考
+    http://hedengcheng.com/?p=771#_Toc374698308 
