--- a/weiwen.org
+++ b/weiwen.org
@@ -1,13 +1,18 @@
 * lunkr容灾
 
-** 完成进度
+** 已完成
+解决手工同步问题
+解决归档同步问题
 
 ** 计划
 数据对比
-开启实时和
+开启实时和强同步
+
 * 负载均衡
 ** 已完成
 方案评审
-网络方案改造
+网络改造方案
 ** 计划
 采购硬件
+
+** 
