--- a/mysql.org
+++ b/mysql.org
@@ -93,3 +93,9 @@
        聚族索引所有记录都加X锁和GAP锁
 ** 参考
     http://hedengcheng.com/?p=771#_Toc374698308 
+
+** 锁
+*** net-key锁
+    锁定范围，并且包含记录本身，gap锁不包含记录本身
+    如果是非唯一索引，在进行行查询的时候会添加gap锁和net-key锁
+    如果是唯一所以，则net-key锁会降级为行锁
